--- a/products-trade/less/products-page/components/_shopping-cart-widget.less
+++ b/products-trade/less/products-page/components/_shopping-cart-widget.less
@@ -13,7 +13,10 @@
 			position: fixed;
 			top: 0;
 		}
-	}
+		&.mobile{
+			position: fixed;
+		}
+	}	
 	aside{
 		.setWidth(83px);
 		height: 100%;
